--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <strong>We're sorry but venue-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPN05XXaBWCuh9O3Yl35paDr0a2rkqVZA&sensor=false&libraries=drawing"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPN05XXaBWCuh9O3Yl35paDr0a2rkqVZA&sensor=true&libraries=drawing" type="text/javascript"></script>
 
     <script src="/dist/build.js"></script>
   </body>
